<resources>
    <string name="app_name">Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="_00_45">00:45</string>
    <string name="start">Start</string>
    <string name="reset">reset</string>
    <string name="_0">0</string>
    <string name="runde_0">Runde: 0</string>
    <string name="runde">Runde:</string>
    <string name="_1">1</string>
    <string name="set_timer">set timer</string>
</resources>
